--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.0",
     "firebase": "^10.7.0",
     "framer-motion": "^10.6.8",
     "multiselect-react-dropdown": "^2.0.25",
     "react": "^18.2.0",
+    "react-accessible-accordion": "^5.0.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-router-dom": "^6.20.0",
     "react-toastify": "^9.1.3",
     "tailwind-scrollbar": "^3.0.5"
